--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -16,6 +16,7 @@
 @import "core/links";
 @import "core/module";
 @import "core/typography";
+@import "core/lists";
 
 // ui elements
 @import "ui/burger";
