--- a/resources/assets/scss/core/_typography.scss
+++ b/resources/assets/scss/core/_typography.scss
@@ -26,8 +26,13 @@ mark {
     color: $white;
     font-weight: 500;
 }
-
-.title {
+h2.title {
+    font-weight: 500;
+    font-size: 25px;
+    margin-bottom: 20px;
+    text-align:center;
+}
+h1.title {
     position: relative;
     font-size: 30px;
     line-height: 37px;
