--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -6,6 +6,7 @@
     margin-bottom: 60px;
     margin-top: 30px;
 
+
     @include breakpoint($brk-medium) {
         display:block;
     }
@@ -44,6 +45,8 @@
     background: #f0f0f0;
     margin-bottom: 60px;
     position:relative;
+    overflow:hidden;
+    cursor: pointer;
 
     input {
         position:absolute;
@@ -51,7 +54,17 @@
         left: 0;
         font-size: 999999px;
         opacity: 0;
+        cursor: pointer;
 
+    }
+
+    &:hover {
+        .upload {
+            .upload-icon {
+                transform: scale(1.1, 1.1);
+                box-shadow: 0 0 30px rgba(255, 255, 255, 1);
+            }
+        }
     }
     .upload {
         text-align:center;
@@ -76,10 +89,7 @@
                 }
             }
 
-            &:hover {
-                transform: scale(1.1, 1.1);
-                box-shadow: 0 0 30px rgba(255, 255, 255, 1);
-            }
+
         }
     }
 }
