--- a/public/css/main.css
+++ b/public/css/main.css
@@ -913,47 +913,49 @@ p a:hover {
   fill: white;
   transform: scale(1);
   transform-origin: 50% 50%;
-  transition: all 0.3s ease;
+  transition: all 0.2s ease;
 }
 /* line 191, ../../resources/assets/scss/core/_module.scss */
 .next-section svg path.circle {
   fill: white;
-  transition: fill 0.3s ease, opacity 0.3s ease;
+  transition: all 0.3s ease;
+  transform-origin: 50% 50%;
   opacity: 1;
 }
-/* line 198, ../../resources/assets/scss/core/_module.scss */
+/* line 200, ../../resources/assets/scss/core/_module.scss */
 .next-section svg:hover path.arrow {
-  transform: scale(1.2);
+  transform: scale(1.3);
 }
-/* line 201, ../../resources/assets/scss/core/_module.scss */
+/* line 203, ../../resources/assets/scss/core/_module.scss */
 .next-section svg:hover path.circle {
-  opacity: 0.1;
+  opacity: 0;
+  transform: scale(0.85);
 }
 
-/* line 210, ../../resources/assets/scss/core/_module.scss */
+/* line 212, ../../resources/assets/scss/core/_module.scss */
 .congrats-section h1 {
   margin-bottom: 40px;
   line-height: 28px;
   letter-spacing: 0.02em;
   max-width: 445px;
 }
-/* line 217, ../../resources/assets/scss/core/_module.scss */
+/* line 219, ../../resources/assets/scss/core/_module.scss */
 .congrats-section p {
   max-width: 445px;
   width: 100%;
   text-align: center;
   line-height: 26px;
 }
-/* line 224, ../../resources/assets/scss/core/_module.scss */
+/* line 226, ../../resources/assets/scss/core/_module.scss */
 .congrats-section blockquote {
   max-width: 445px;
 }
-/* line 228, ../../resources/assets/scss/core/_module.scss */
+/* line 230, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .actions {
   text-align: center;
   margin: 40px 0;
 }
-/* line 233, ../../resources/assets/scss/core/_module.scss */
+/* line 235, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .congrats-container {
   width: 100%;
   height: 100%;
@@ -967,28 +969,47 @@ p a:hover {
   visibility: hidden;
 }
 @media (max-width: 620px) {
-  /* line 233, ../../resources/assets/scss/core/_module.scss */
+  /* line 235, ../../resources/assets/scss/core/_module.scss */
   .congrats-section .congrats-container {
     align-items: inherit;
   }
 }
-/* line 249, ../../resources/assets/scss/core/_module.scss */
+/* line 251, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .congrats-container > .inner {
   padding: 40px 20px;
 }
 @media (max-width: 620px) {
-  /* line 249, ../../resources/assets/scss/core/_module.scss */
+  /* line 251, ../../resources/assets/scss/core/_module.scss */
   .congrats-section .congrats-container > .inner {
     padding-top: 80px;
   }
 }
+/* line 260, ../../resources/assets/scss/core/_module.scss */
+.congrats-section .pre-complete,
+.congrats-section .post-complete {
+  display: table;
+  margin: 0 auto;
+}
+/* line 265, ../../resources/assets/scss/core/_module.scss */
+.congrats-section .pre-complete > .inner,
+.congrats-section .post-complete > .inner {
+  display: table-cell;
+  vertical-align: middle;
+}
+/* line 269, ../../resources/assets/scss/core/_module.scss */
+.congrats-section .pre-complete > .inner .content,
+.congrats-section .post-complete > .inner .content {
+  margin: auto;
+  max-width: 445px;
+  width: 100%;
+}
 
-/* line 259, ../../resources/assets/scss/core/_module.scss */
+/* line 280, ../../resources/assets/scss/core/_module.scss */
 .actions {
   text-align: center;
 }
 
-/* line 263, ../../resources/assets/scss/core/_module.scss */
+/* line 284, ../../resources/assets/scss/core/_module.scss */
 .down-arrow {
   border: 0;
   background: none;
@@ -998,17 +1019,50 @@ p a:hover {
   display: inline-block;
   cursor: pointer;
 }
-/* line 272, ../../resources/assets/scss/core/_module.scss */
+/* line 293, ../../resources/assets/scss/core/_module.scss */
 .down-arrow svg {
   width: 100%;
   height: 100%;
 }
-/* line 275, ../../resources/assets/scss/core/_module.scss */
+/* line 296, ../../resources/assets/scss/core/_module.scss */
 .down-arrow svg path {
   fill: #f16060;
 }
+/* line 301, ../../resources/assets/scss/core/_module.scss */
+.down-arrow svg {
+  width: 100%;
+  height: 100%;
+}
+/* line 305, ../../resources/assets/scss/core/_module.scss */
+.down-arrow svg path {
+  transform-origin: 50% 50%;
+  transition: all 0.2s ease;
+}
+/* line 310, ../../resources/assets/scss/core/_module.scss */
+.down-arrow svg path.arrow {
+  fill: #f16060;
+  transform: scale(1);
+  transform-origin: 50% 50%;
+  transition: all 0.2s ease;
+}
+/* line 317, ../../resources/assets/scss/core/_module.scss */
+.down-arrow svg path.circle {
+  fill: #f16060;
+  transition: all 0.3s ease;
+  transform-origin: 50% 50%;
+  opacity: 1;
+}
+/* line 325, ../../resources/assets/scss/core/_module.scss */
+.down-arrow svg:hover path.arrow {
+  transform: scale(1.3);
+}
+/* line 328, ../../resources/assets/scss/core/_module.scss */
+.down-arrow svg:hover path.circle {
+  opacity: 0;
+  transform: scale(1.5);
+}
 
-/* line 281, ../../resources/assets/scss/core/_module.scss */
+/* line 336, ../../resources/assets/scss/core/_module.scss */
 .indicator {
   position: fixed;
   top: 50%;
@@ -1019,19 +1073,19 @@ p a:hover {
   z-index: 99;
 }
 @media (max-width: 1120px) {
-  /* line 281, ../../resources/assets/scss/core/_module.scss */
+  /* line 336, ../../resources/assets/scss/core/_module.scss */
   .indicator {
     width: 50px;
     height: 100px;
   }
 }
 @media (max-width: 620px) {
-  /* line 281, ../../resources/assets/scss/core/_module.scss */
+  /* line 336, ../../resources/assets/scss/core/_module.scss */
   .indicator {
     display: none;
   }
 }
-/* line 299, ../../resources/assets/scss/core/_module.scss */
+/* line 354, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon {
   width: 50px !important;
   height: 50px;
@@ -1039,16 +1093,16 @@ p a:hover {
   padding: 8px;
   float: right;
 }
-/* line 307, ../../resources/assets/scss/core/_module.scss */
+/* line 362, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 310, ../../resources/assets/scss/core/_module.scss */
+/* line 365, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon svg path {
   fill: white;
 }
-/* line 317, ../../resources/assets/scss/core/_module.scss */
+/* line 372, ../../resources/assets/scss/core/_module.scss */
 .indicator .page-icon:after {
   position: relative;
   font-size: 35px;
@@ -1057,7 +1111,7 @@ p a:hover {
   top: 0;
   left: 0;
 }
-/* line 327, ../../resources/assets/scss/core/_module.scss */
+/* line 382, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon {
   width: 110px;
   height: 50px;
@@ -1073,7 +1127,7 @@ p a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 @media (max-width: 1120px) {
-  /* line 327, ../../resources/assets/scss/core/_module.scss */
+  /* line 382, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon {
     background-color: rgba(255, 255, 255, 0.9);
     width: 50px;
@@ -1081,18 +1135,18 @@ p a:hover {
     padding: 15px 12px;
   }
 }
-/* line 350, ../../resources/assets/scss/core/_module.scss */
+/* line 405, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon:hover svg path {
   fill: rgba(241, 96, 96, 0.6);
 }
-/* line 356, ../../resources/assets/scss/core/_module.scss */
+/* line 411, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon svg {
   width: 25px;
   display: inline-block;
   vertical-align: middle;
   margin-right: 10px;
 }
-/* line 363, ../../resources/assets/scss/core/_module.scss */
+/* line 418, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon svg path {
   fill: #f16060;
   stroke: #f16060;
@@ -1102,23 +1156,23 @@ p a:hover {
   transition: fill 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 @media (max-width: 800px) {
-  /* line 356, ../../resources/assets/scss/core/_module.scss */
+  /* line 411, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon svg {
     margin: 2px auto;
   }
 }
-/* line 374, ../../resources/assets/scss/core/_module.scss */
+/* line 429, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon span {
   line-height: 21px;
 }
 @media (max-width: 1120px) {
-  /* line 374, ../../resources/assets/scss/core/_module.scss */
+  /* line 429, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon span {
     display: none;
   }
 }
 
-/* line 386, ../../resources/assets/scss/core/_module.scss */
+/* line 441, ../../resources/assets/scss/core/_module.scss */
 [data-current-section="0"] .indicator,
 [data-current-section="1"] .indicator {
   display: none;
