added list style, tweaked title heading.

--- a/resources/assets/scss/core/_typography.scss
+++ b/resources/assets/scss/core/_typography.scss
@@ -26,12 +26,15 @@ mark {
     color: $white;
     font-weight: 500;
 }
+
 h2.title {
     font-weight: 500;
     font-size: 25px;
-    margin-bottom: 20px;
-    text-align:center;
+    font-style: italic;
+    margin: 45px 0 20px;
+    text-align: center;
 }
+
 h1.title {
     position: relative;
     font-size: 30px;
