--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -1,14 +1,54 @@
 .quote-list {
-	list-style: decimal;
-	margin-bottom: 20px;
-	> li {
-		margin-bottom: 5px;
-	}
+    list-style: decimal;
+    margin-bottom: 20px;
+    font-weight: 500;
+    padding-left: 20px;
+
+    > li {
+        margin-bottom: 5px;
+    }
 }
 
 .u-quote-list {
-	margin-bottom: 20px;
-	> li {
-		margin-bottom: 5px;
-	}
+    margin-bottom: 20px;
+    > li {
+        margin-bottom: 12px;
+    }
 }
+
+ul {
+    &.list--simple {
+        padding-left: 20px;
+        li {
+            position: relative;
+            margin-bottom: 10px;
+            text-align: left;
+            font-weight: 500;
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0; left: 0;
+                height: 8px; width: 8px;
+                border: 2px solid $lightRed;
+                border-radius: 100%;
+                @include transform(translate3d(-20px, 100%, 0));
+            }
+        }
+    }
+
+    &.accordion.single {
+        h2 {
+            font-weight: 500;
+            font-style: italic;
+        }
+
+        li {
+            text-align: left;
+            &:after {
+                display: none;
+            }
+        }
+    }
+}
+
