--- a/resources/assets/scss/core/_typography.scss
+++ b/resources/assets/scss/core/_typography.scss
@@ -1,8 +1,8 @@
-strong {
+strong,b {
     font-weight: bold;
 }
 
-em {
+em,i {
     font-style: italic;
 }
 
@@ -31,8 +31,11 @@ h2.title {
     font-weight: 500;
     font-size: 25px;
     font-style: italic;
-    margin: 45px 0 20px;
+    margin: 45px 0 32px;
     text-align: center;
+    &:before {
+        display: none;
+    }
 }
 
 h1.title {
@@ -67,6 +70,16 @@ h1.title {
         margin-bottom: 40px;
         font-weight: 500;
     }
+}
+
+h3 {
+    font-size: 16px;
+    margin: 30px 0 24px;
+    font-style: normal;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+    padding: 12px 0;
 }
 
 blockquote {
