added blue to dashboard

--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -10,6 +10,9 @@ $hoverGrey: #d6d6d6;
 $white: #ffffff;
 $black: #252E33;
 
+$blue-dark: #045F8D;
+$blue-light: #0292C3;
+
 // fonts
 $icon: 'icomoon';
 
