--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -361,18 +361,20 @@
         margin: 0 10px;
         vertical-align: top;
         font-weight: normal;
+
         &:hover {
             color: $lightRed;
-            svg {
-                path {
-                    fill: $lightRed;
-                }
-            }
+            // svg {
+            //     path {
+            //         fill: $lightRed;
+            //     }
+            // }
         }
         svg {
             height: 17px;
             display:inline-block;
             margin-right: 5px;
+            @include transition(fill $transition);
 
         }
     }
