--- a/resources/assets/scss/core/_base.scss
+++ b/resources/assets/scss/core/_base.scss
@@ -34,17 +34,41 @@ h1.plain {
         font-size: 22px;
         line-height: 25px;
     }
+
     &.margin-bottom {
         margin-bottom: 25px;
     }
 }
 
 .dots {
+    position: relative;
     background: image-url('icons/bullets.svg') no-repeat top left;
     width: 70px;
     height: 6px;
     background-size: cover;
     margin: 0 auto;
+    opacity: 0.5;
+
+    // &:before {
+    //     content: '\e62e';
+    //     position: absolute;
+    //     font-size: $icon;
+    //     top: -12px; left: 0;
+    //     height: 1px; width: 45%;
+    //     background: $lightRed;
+    //     margin-left: 25%;
+    //     @include transform(translateX(-50%));
+    // }
+
+    // &:after {
+    //     content: '';
+    //     position: absolute;
+    //     bottom: -12px; left: 0;
+    //     height: 1px; width: 45%;
+    //     background: $lightRed;
+    //     margin-left: 50%;
+    //     @include transform(translateX(-50%));
+    // }
 }
 
 .auth {
