--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -87,6 +87,7 @@
             color: #045F8D;
             font-size: 18px; //might be temp;
 
+
             span {
                 color: $black;
                 display: block;
@@ -94,9 +95,12 @@
                 font-style: italic;
                 text-transform: uppercase;
                 letter-spacing: 0.1em;
+                line-height: 1.3;
+                padding-bottom: 2px;
+                font-weight: 500;
 
                 &:nth-child(2) {
-                    padding: 16px 0 0px
+                    padding: 16px 0 2px;
                 }
             }
         }
