--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -51,6 +51,7 @@
             font-weight:bold;
             font-size: 25px;
             margin-bottom: 22px;
+            min-height: 80px;
         }
         p {
             font-size: 14px;
