--- a/resources/assets/scss/pages/home/_questions.scss
+++ b/resources/assets/scss/pages/home/_questions.scss
@@ -119,10 +119,10 @@
             svg {
                 width: 100%;
                 height: 100%;
-                path {
-                    fill: $lightRed;
-                    transition: fill 0.3s ease;
-                }
+                // path {
+                //     // fill: $lightRed;
+                //     // transition: fill 0.3s ease;
+                // }
             }
             &:hover {
                 svg {
