--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -17,14 +17,15 @@
         }
 
         > .inner {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             padding: 40px $gutter;
 
             @include breakpoint($break-620) {
                 padding: 80px $gutter;
                 align-items: inherit;
+            }
+
+            .content {
+                margin: 0 auto;
             }
         }
 
@@ -92,9 +93,13 @@
 }
 
 .module-title {
+    position: relative;
+    top: 50%;
+    @include transform(translateY(-50%));
     h1.title {
         font-size: 40px;
         max-width: 320px;
+        margin: auto;
 
         line-height: 1;
         color: $white;
@@ -163,7 +168,7 @@
 }
 
 .next-section {
-    position: absolute;
+    position: relative;
     display: block;
     width: 50px;
     height: 50px;
@@ -176,6 +181,10 @@
     border: 0;
     transform-origin: 50% 50%;
     transition: bottom 100ms ease-in-out;
+
+    &.absol {
+        position: absolute;
+    }
 
     svg {
         width: 100%;
