module copy change BH58 BH55

--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -11,8 +11,19 @@
 
 .u-quote-list {
     margin-bottom: 20px;
+
     > li {
         margin-bottom: 12px;
+        font-weight: 500;
+        font-style: italic;
+
+        &:before {
+            content: '“';
+        }
+
+        &:after {
+            content: '”';
+        }
     }
 }
 
