--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -16,20 +16,13 @@
         margin-bottom: 12px;
         font-weight: 500;
         font-style: italic;
-
-        &:before {
-            content: '“';
-        }
-
-        &:after {
-            content: '”';
-        }
     }
 }
 
 ul {
     &.list--simple {
         padding: 0 0 20px 20px;
+
         li {
             position: relative;
             margin-bottom: 10px;
@@ -55,8 +48,11 @@ ul {
             font-style: italic;
         }
 
-        li {
+        > li {
             text-align: left;
+        }
+
+        li {
             &:after {
                 display: none;
             }
