--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -19,6 +19,14 @@
     }
 }
 
+ol {
+    padding: 0 0 20px 20px;
+    li {
+        list-style: decimal;
+        margin-bottom: 12px;
+    }
+}
+
 ul {
     &.list--simple {
         padding: 0 0 20px 20px;
